# routers/api/v1/user.go
@@ -1,7 +1,6 @@
 package v1
 
 import (
-	"fmt"
 	"net/http"
 	"work-manager/db"
 	"work-manager/pkg/common"
@@ -61,7 +60,7 @@ end:
 // @Param account_id body int true "用户学号"
 // @Param password body string  true "密码"
 // @Success 200 {object} ResBody "{"code":200,"data":nil,"msg":"ok"}"
-// @Failure 10002 {object} ResBody "{"code":10002,"data":nil,"msg":"用户不存在"}"
+// @Failure 10004 {object} ResBody "{"code":10002,"data":nil,"msg":"用户不存在"}"
 // @Failure 10003 {object} ResBody "{"code":10003,"data":nil,"msg":"密码错误"}"
 // @Router /api/v1/login [POST]
 func Login(c *gin.Context) {
@@ -74,7 +73,6 @@ func Login(c *gin.Context) {
 		goto end
 	}
 	if u, err = db.GetUser(loginBody.AccountID); err != nil {
-		fmt.Println(err)
 		code = e.ERROR_NOT_EXIST_USER
 		goto end
 	}
@@ -99,5 +97,62 @@ end:
 
 }
 
-// GradeList 班级信息
-func GradeList(c *gin.Context) {}
+// @Summary 登出,清除cookie
+// @Produce  json
+// @Success 200 {object} ResBody "{"code":200,"data":nil,"msg":"ok"}"
+// @Router /api/v1/logout [GET]
+func Logout(c *gin.Context) {
+	session := sessions.Default(c)
+	session.Options(sessions.Options{
+		MaxAge: -1,
+		Path:   "/",
+	})
+	session.Delete("user_info")
+	session.Save()
+	// c.SetCookie("wm_login", "value", -1, "/", "", false, true)
+	code := 200
+	c.JSON(http.StatusOK, gin.H{
+		"code":    code,
+		"massage": e.GetMsg(code),
+		"data":    nil,
+	})
+}
+
+// @Summary 获取班级信息，信息是死的，数据库里的班级也是死的
+// @Produce  json
+// @Success 200 {object} ResBody {"code":200,"data":{"value":"2016","label":"1","children":[{"value":"软件工程","label":"1"},{"value":"计算机科学与技术","label":"2"},{"value":"英语","label":"3"},{"value":"信息技术与科学","label":"4"},{"value":"物联网","label":"5"}]},"msg":"ok"}
+// @Router /api/v1/garde-info [GET]
+func GradeList(c *gin.Context) {
+	gradeInfo := &common.GradeInfo{
+		Value: "2016",
+		Label: "1",
+		Children: []*common.GradeInfo{
+			&common.GradeInfo{
+				Value: "软件工程",
+				Label: "1",
+			},
+			&common.GradeInfo{
+				Value: "计算机科学与技术",
+				Label: "2",
+			},
+			&common.GradeInfo{
+				Value: "英语",
+				Label: "3",
+			},
+			&common.GradeInfo{
+				Value: "信息技术与科学",
+				Label: "4",
+			},
+			&common.GradeInfo{
+				Value: "物联网",
+				Label: "5",
+			},
+		},
+	}
+	code := 200
+	c.JSON(200, gin.H{
+		"code": code,
+		"msg":  e.GetMsg(code),
+		"data": gradeInfo,
+	})
+}
